# motor-sim

./: .gitignore  CLAUDE.md  README.md  adversarial_scenarios.py  ai_commissioner.py  control_algorithms.py  dc_bus.py  debug_ui.py  demo.py  demo_him.py  flywheel_energy.py  grid_inverter.py  grid_recorder.py  grid_sim.py  him_controller.py  him_field_off.py  inverter_topology.py  motor_base.py  pmsm_model.py  power_ops.py  pyproject.toml  rl_environment.py  rl_policy.py  s4_ai_controller.py  s4_experiment_runner.py  s4_metrics.py  s4_scenarios.py  sic_md_inverter.py  sim_grid_events.py  system_config.py  test_all_motors.py  test_identify.py  train_rl.py  virtual_controller.py  virtual_opcua_server.py
docs/: ARCHITECTURE.md  CONTROL_SETPOINTS.md  CONVENTIONS.md  ERROR_CODES.md  INSTALLATION.md  STATE_MACHINE.md  TELEMETRY.md  升级路线图.md
docs/plans/: 2026-07-04-v2.5-rl.md
models/: rl_policy_ep50.npz
tests/: conftest.py  test_adversarial.py  test_grid_recorder.py  test_rl_env.py
