[project]
name = "motor-sim"
version = "2.0.0"
description = "泓慧能源 500kW/3kWh 飞轮UPS 全链路仿真与AI控制平台"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "gymnasium>=1.0",
    "stable-baselines3>=2.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "asyncua>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
rl = [
    "torch>=2.0",
    "tensorboard>=2.16",
    "shap>=0.45",
]
hmi = [
    "streamlit>=1.35",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
